--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="./style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
     <div class="poke-search">
@@ -21,6 +22,16 @@
     <div class="poke-info">
         
     </div>
+    <footer>
+      <section class="createdBy">
+          Criado por Lucas Passos
+          <i class='bx bx-registered'></i>
+      </section>
+      <section class="socialMedia">
+          <a target="_blank" href="https://www.linkedin.com/in/lucas--passos/"><i class='bx bxl-linkedin-square bx-xs' class="linkedin"></i></a>
+          <a target="_blank" href="https://github.com/LucasBinho"><i class='bx bxl-github bx-xs' class="github"></i></a>
+      </section>
+  </footer>
    <script
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
